# HelixScale_HPC-Optimized-Data-Platform-Orchestrator

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Claude.md  LICENSE  Make  Project-spec.md  README.md  bootstrap_linux.sh  main.py  pyproject.toml
containers/: docker-compose.yml
docs/: learnings.md
docs/adr/: adr-001-sythetic-data-real-PDB-data-tradeoff.md
docs/runbooks/: RUNBOOK.md
docs/spec/: spec.md
pipelines/ci/.github/: bug_report.md
pipelines/ci/.github/ISSUE_TEMPLATE/: feature_request.md
